--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.20.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.523.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -26,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "recharts": "^3.0.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.75"
   },
